--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9aa2f7">  <td>24/02/12 09:10:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithValidUsernameAndInvalidPassword(java.lang.String,java.lang.String)[pri:2, instance:com.test.LoginTest@235ecd9f]">loginWithValidUsernameAndInvalidPassword</td> 
-  <td>main@1204481453</td>   <td></td> </tr>
-<tr bgcolor="9aa2f7">  <td>24/02/12 09:10:56</td>   <td>5641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithInValidUsernameAndInvalidPassword(java.lang.String,java.lang.String)[pri:3, instance:com.test.LoginTest@235ecd9f]">loginWithInValidUsernameAndInvalidPassword</td> 
-  <td>main@1204481453</td>   <td></td> </tr>
-<tr bgcolor="9aa2f7">  <td>24/02/12 09:10:45</td>   <td>-5386</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithInValidUsernameAndPassword(java.lang.String,java.lang.String)[pri:1, instance:com.test.LoginTest@235ecd9f]">loginWithInValidUsernameAndPassword</td> 
-  <td>main@1204481453</td>   <td></td> </tr>
-<tr bgcolor="9aa2f7">  <td>24/02/12 09:10:34</td>   <td>-15559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithValidUsernameAndPassword(java.lang.String,java.lang.String)[pri:0, instance:com.test.LoginTest@235ecd9f]">loginWithValidUsernameAndPassword</td> 
-  <td>main@1204481453</td>   <td></td> </tr>
-<tr bgcolor="9aa2f7">  <td>24/02/12 09:11:07</td>   <td>16489</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.clickingLoginButtonWithoutPassword(java.lang.String)[pri:5, instance:com.test.LoginTest@235ecd9f]">clickingLoginButtonWithoutPassword</td> 
-  <td>main@1204481453</td>   <td></td> </tr>
-<tr bgcolor="9aa2f7">  <td>24/02/12 09:11:01</td>   <td>10997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.withOutUsernameAndPassword()[pri:4, instance:com.test.LoginTest@235ecd9f]">withOutUsernameAndPassword</td> 
-  <td>main@1204481453</td>   <td></td> </tr>
-<tr bgcolor="9aa2f7">  <td>24/02/12 09:11:11</td>   <td>21034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.clickingLoginButtonWithoutUsername(java.lang.String)[pri:6, instance:com.test.LoginTest@235ecd9f]">clickingLoginButtonWithoutUsername</td> 
-  <td>main@1204481453</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>24/03/25 11:10:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.withOutUsernameAndPassword()[pri:4, instance:com.test.LoginTest@cb0755b]">withOutUsernameAndPassword</td> 
+  <td>main@2113748097</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>24/03/25 11:10:24</td>   <td>-9844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithValidUsernameAndInvalidPassword(java.lang.String,java.lang.String)[pri:2, instance:com.test.LoginTest@cb0755b]">loginWithValidUsernameAndInvalidPassword</td> 
+  <td>main@2113748097</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>24/03/25 11:10:18</td>   <td>-15561</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithInValidUsernameAndPassword(java.lang.String,java.lang.String)[pri:1, instance:com.test.LoginTest@cb0755b]">loginWithInValidUsernameAndPassword</td> 
+  <td>main@2113748097</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>24/03/25 11:10:12</td>   <td>-21719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithValidUsernameAndPassword(java.lang.String,java.lang.String)[pri:0, instance:com.test.LoginTest@cb0755b]">loginWithValidUsernameAndPassword</td> 
+  <td>main@2113748097</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>24/03/25 11:10:29</td>   <td>-5171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithInValidUsernameAndInvalidPassword(java.lang.String,java.lang.String)[pri:3, instance:com.test.LoginTest@cb0755b]">loginWithInValidUsernameAndInvalidPassword</td> 
+  <td>main@2113748097</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>24/03/25 11:10:42</td>   <td>7704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.clickingLoginButtonWithoutUsername(java.lang.String)[pri:6, instance:com.test.LoginTest@cb0755b]">clickingLoginButtonWithoutUsername</td> 
+  <td>main@2113748097</td>   <td></td> </tr>
+<tr bgcolor="b5ac82">  <td>24/03/25 11:10:38</td>   <td>4225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.clickingLoginButtonWithoutPassword(java.lang.String)[pri:5, instance:com.test.LoginTest@cb0755b]">clickingLoginButtonWithoutPassword</td> 
+  <td>main@2113748097</td>   <td></td> </tr>
 </table>
