--- a/test-output/index.html
+++ b/test-output/index.html
@@ -128,7 +128,7 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.test.LoginTest" class="method navigator-link" hash-for-method="loginWithValidUsernameAndPassword(Shanmathi22, Shan@22)">loginWithValidUsernameAndPassword(Shanmathi22, Shan@22)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.test.LoginTest" class="method navigator-link" hash-for-method="loginWithValidUsernameAndPassword(Shanmathi22, AM29JB)">loginWithValidUsernameAndPassword(Shanmathi22, AM29JB)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -196,10 +196,10 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="loginWithValidUsernameAndPassword(Shanmathi22, Shan@22)">
-                  </a> <!-- loginWithValidUsernameAndPassword(Shanmathi22, Shan@22) -->
+                  <a name="loginWithValidUsernameAndPassword(Shanmathi22, AM29JB)">
+                  </a> <!-- loginWithValidUsernameAndPassword(Shanmathi22, AM29JB) -->
                   <span class="method-name">loginWithValidUsernameAndPassword</span>
-                  <span class="parameters">(Shanmathi22,Shan@22)</span>
+                  <span class="parameters">(Shanmathi22,AM29JB)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -222,7 +222,7 @@
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
-    &lt;parameter name=&quot;password&quot; value=&quot;Shan@22&quot;/&gt;
+    &lt;parameter name=&quot;password&quot; value=&quot;AM29JB&quot;/&gt;
     &lt;parameter name=&quot;password4&quot; value=&quot;Shan22&quot;/&gt;
     &lt;parameter name=&quot;password3&quot; value=&quot;Shan22&quot;/&gt;
     &lt;parameter name=&quot;username4&quot; value=&quot;Shanmathi22&quot;/&gt;
@@ -277,36 +277,36 @@ data.addRows(7);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'loginWithValidUsernameAndPassword')
 data.setCell(0, 2, 'com.test.LoginTest')
-data.setCell(0, 3, 10167);
+data.setCell(0, 3, 6150);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'clickingLoginButtonWithoutUsername')
+data.setCell(1, 1, 'loginWithInValidUsernameAndPassword')
 data.setCell(1, 2, 'com.test.LoginTest')
-data.setCell(1, 3, 8519);
+data.setCell(1, 3, 5715);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'loginWithValidUsernameAndInvalidPassword')
+data.setCell(2, 1, 'loginWithInValidUsernameAndInvalidPassword')
 data.setCell(2, 2, 'com.test.LoginTest')
-data.setCell(2, 3, 5639);
+data.setCell(2, 3, 5168);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'withOutUsernameAndPassword')
+data.setCell(3, 1, 'clickingLoginButtonWithoutUsername')
 data.setCell(3, 2, 'com.test.LoginTest')
-data.setCell(3, 3, 5489);
+data.setCell(3, 3, 5076);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'loginWithInValidUsernameAndPassword')
+data.setCell(4, 1, 'loginWithValidUsernameAndInvalidPassword')
 data.setCell(4, 2, 'com.test.LoginTest')
-data.setCell(4, 3, 5384);
+data.setCell(4, 3, 4671);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'loginWithInValidUsernameAndInvalidPassword')
+data.setCell(5, 1, 'withOutUsernameAndPassword')
 data.setCell(5, 2, 'com.test.LoginTest')
-data.setCell(5, 3, 5355);
+data.setCell(5, 3, 4224);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'clickingLoginButtonWithoutPassword')
 data.setCell(6, 2, 'com.test.LoginTest')
-data.setCell(6, 3, 4543);
+data.setCell(6, 3, 3473);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 45 seconds</span>
+              <span class="suite-total-time">Total running time: 34 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -334,32 +334,32 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.test.LoginTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">loginWithValidUsernameAndPassword(Shanmathi22, Shan@22)</span>
+                <span class="method-name">loginWithValidUsernameAndPassword(Shanmathi22, AM29JB)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">loginWithInValidUsernameAndPassword(Shan, Shan@22)</span>
-                <span class="method-start">10172 ms</span>
+                <span class="method-start">6157 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">loginWithValidUsernameAndInvalidPassword(Shanmathi22, Shan22)</span>
-                <span class="method-start">15558 ms</span>
+                <span class="method-start">11874 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">loginWithInValidUsernameAndInvalidPassword(Shan, Shan22)</span>
-                <span class="method-start">21199 ms</span>
+                <span class="method-start">16548 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">withOutUsernameAndPassword</span>
-                <span class="method-start">26555 ms</span>
+                <span class="method-start">21718 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">clickingLoginButtonWithoutPassword(Shanmathi22)</span>
-                <span class="method-start">32047 ms</span>
+                <span class="method-start">25943 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">clickingLoginButtonWithoutUsername(Shan22)</span>
-                <span class="method-start">36592 ms</span>
+                <span class="method-start">29422 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
